syntax = "proto3";

package pos.blog.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "pos/blog/v1/params.proto";
import "pos/blog/v1/post.proto";

option go_package = "github.com/you/pos/x/blog/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/you/pos/blog/v1/params";
  }

  // GetPost queries a single Post by id.
  rpc GetPost(QueryGetPostRequest) returns (QueryGetPostResponse) {
    option (google.api.http).get = "/you/pos/blog/v1/post/{id}";
  }

  // ListPost queries a paginated list of Post items.
  rpc ListPost(QueryAllPostRequest) returns (QueryAllPostResponse) {
    option (google.api.http).get = "/you/pos/blog/v1/post";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetPostRequest defines the QueryGetPostRequest message.
message QueryGetPostRequest {
  uint64 id = 1;
}

// QueryGetPostResponse defines the QueryGetPostResponse message.
message QueryGetPostResponse {
  Post post = 1 [(gogoproto.nullable) = false];
}

// QueryAllPostRequest defines the QueryAllPostRequest message.
message QueryAllPostRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllPostResponse defines the QueryAllPostResponse message.
message QueryAllPostResponse {
  repeated Post post = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
